# aurex-solana-bridge

./: .env.example  COLOSSEUM_SUBMISSION.md  COLOSSEUM_SUBMISSION_SUCCESS.md  Dockerfile  HACKATHON_SUBMISSION.md  HACKATHON_TARGETS.md  PITCH_DECK.md  QUICK_DEMO.md  README.md  README.ru.md  SUBMISSION_STEPS.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
api/: package.json  tsconfig.json
api/src/: index.ts
api/src/middleware/: auth.ts  rateLimit.ts
api/src/services/: aurexApi.ts  notifications.ts
api/src/utils/: logger.ts  validation.ts
docs/: api.md  api.ru.md  program.md  program.ru.md  sdk.md  sdk.ru.md  security.ru.md
program/: Anchor.toml  Cargo.toml
program/src/: lib.rs
program/tests/: aurex_solana_bridge.ts
scripts/: cli.js  deploy-devnet.sh  init-db.sql  monitor.js  setup.sh
sdk/: package.json
sdk/src/: index.ts
